Fixed problem with login/signup buttons shifting left while logged out

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,14 +1,27 @@
 .navTop {
     display: flex;
     align-items: center;
-    right: 0;
     font-size: 16px;
     font-weight: 500;
     position: fixed;
-    /* justify-content: flex-end; */
+    /* justify-content: space-between; */
     font-family: Arial, Helvetica, sans-serif;
-
     
+    width: 100%;
+    height: 10%;
+    background-color: #0b0b0b;
+    color: white;
+    z-index: 1;
+}
+
+.navTopLoggedOut {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    position: fixed;
+    justify-content: flex-end;
+    font-family: Arial, Helvetica, sans-serif;
     
     width: 100%;
     height: 10%;
@@ -22,7 +35,6 @@
     font-size: 30px;
     margin-left: 250px;
     margin-right: 10px;
-
     text-decoration: none;
     color: white;
 }
@@ -31,7 +43,6 @@
     display: flex;
     font-size: 30px;
     margin-right: 50px;
-
     text-decoration: none;
     color: white;
 }
@@ -45,31 +56,29 @@
 .icons {
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    /* position: relative; */
+    /* align-items: center; */
+    /* margin-right: 20px; */
 }
 
 #navLinkedIn {
-    position: relative;
+    /* position: relative;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-end; */
     padding: 0px 10px 0px 10px;
     color: white;
-    /* background-color: #0b0b0b; */
 }
 
 #navGithub {
-    position: relative;
+    /* position: relative;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-end; */
     padding: 0px 10px 0px 10px;
     color: white;
-    /* background-color: #0b0b0b; */
-
 }
 
 .navSignup {
     color: #A7A7A7;
-
     margin-right: 15px;
     text-decoration: none;
 }
@@ -85,7 +94,6 @@
     align-items: center;
     border-radius: 500px;
     text-decoration: none;
-
     margin-right: 30px;
     margin-left: 15px;
 }
@@ -121,6 +129,5 @@
 
 .profile-dropdown {
     color: white;
-
 }
 
